# augments-mcp-server

./: .dockerignore  .env.example  .gitignore  API_GUIDE.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  env.example  minimal_server.py  next.config.mjs  package.json  pyproject.toml  railway.json  server.json  start.sh  test_server.py  tsconfig.json  vercel.json
.claude/: settings.local.json
app/: page.tsx
frameworks/ai-ml/: huggingface.json  langchain.json  mcp-sdk-python.json  streamlit.json
frameworks/backend/: actix.json  axum.json  echo.json  express.json  fiber.json  spring-boot.json
frameworks/database/: sequelize.json  sqlalchemy.json
frameworks/devops/: ansible.json  kubernetes.json
frameworks/mobile/: capacitor.json  expo.json  ionic.json  xamarin.json
frameworks/state-management/: recoil.json
frameworks/testing/: cypress.json
frameworks/tools/: eslint.json  parcel.json  webpack.json
frameworks/web/: angular.json  astro.json  chakra-ui.json  lit.json  mantine.json  material-ui.json  preact.json  qwik.json  react.json  remix.json  semantic-ui.json  solidjs.json  stimulus.json  tailwindcss.json
scripts/: benchmark.ts
src/: index.ts  server.ts
src/augments_mcp/: server.py  web_server.py
src/cache/: index.ts  kv-cache.ts  strategies.ts  unified-cache.test.ts  unified-cache.ts
src/config/: index.ts
src/core/: example-extractor.test.ts  example-extractor.ts  query-parser.test.ts  query-parser.ts  type-fetcher.ts  type-parser.test.ts  type-parser.ts
src/middleware/: auth.ts  (+2 more)
tests/: test_localrepository_provider.py
(+26 files in other folders)
